--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,6 @@ header{
     padding: 10px 50px;
     position: sticky;
     top: 0;
-    left: 0;
     z-index: 10;
     display: flex;
     justify-content: space-between;
@@ -142,7 +141,7 @@ button{
 
 #bg-text{
     width: 90%;
-    padding: 170px 0px 0px 0px;
+    padding: 100px 0px 0px 0px;
     text-align: center;
     margin: 0 auto;
 }
@@ -158,7 +157,7 @@ h1{
 }
 
 h2{
-    width: 120%;
+    width: 100%;
     font-size: 3.4rem;
     display: flex;
     flex-direction: column;
@@ -186,11 +185,6 @@ p{
     justify-content: space-between;
 }
 
-.logo{
-    width: 90%;
-    font-weight: 400;
-}
-
 img.logo{
     width: 6rem;
 }
@@ -203,20 +197,22 @@ img.logo{
 }
 
 #curvebg{
-    width: 130%;
+    width: 1366px;
     background-color: rgba(32,31,31);
-    height: 800px;
+    height: 900px;
     border-radius: 50%;
     position: absolute;
-    top: 20%;
-    left: -184px;
+    top: 74%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     z-index: -1;
 }
 
 .bg-text{
     width: 100%;
     background-color: rgb(32, 31, 31);
-    padding: 15rem 0px;
+    padding: 500px 0px 100px;
+    margin-top: -210px;
 }
 
 .bg-text-img{
@@ -246,11 +242,6 @@ img.logo{
 
 .bg-text>.image{
     width: 550px;
-}
-
-.bg-text1>.image{
-    width: 700px;
-    transform: translate(6.5%, -10%);
 }
 
 .details{
@@ -341,6 +332,14 @@ img.logo{
 }
 
 .bg-text6>h2{
+    width: 80%;
+}
+
+.dbs>p{
+    width: 6%;
+}
+
+.bg-text6>h2{
     transform: translate(24%);
     margin-bottom: 0;
 }
@@ -377,13 +376,11 @@ img.logo{
     text-align: center;
     padding: 70px;
     position: relative;
-
 }
 
 #text1>h3, #text2>h3, #text3>h3{
     font-size: 2.3rem;
     width: 100%;
-    
 }
 
 #text1, #text2, #text3{
@@ -396,10 +393,9 @@ img.logo{
 
 .bg-text9{
     background-color: #eaeaea;
-    color: white;
+    color: black;
     text-align: center;
-    padding: 70px;
-    margin-bottom: 100px;
+    padding: 170px;
 }
 
 .chat-box{
@@ -409,8 +405,8 @@ img.logo{
     background-color: blue;
     position: sticky;
     bottom: 6%;
-    left: 94%;
-    
+    float: right;
+    margin-right: 10px;
 }
 
 .chat{
