--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@
 }
 
 body{
+    box-sizing: border-box;
     width: 100%;
     max-width: 1366px;
     min-width: 1200px;
@@ -154,6 +155,11 @@ button{
     margin: 0 auto;
 }
 
+.imagextext{
+    margin-top: -10px; 
+    width: 44%;
+}
+
 h1{
     font-size: 4.8rem;
     letter-spacing: -3px;
@@ -244,6 +250,7 @@ img.logo{
 .details{
     width: 40%;
     padding-top: 50px;
+    transform: translate(20%, 20%);
 }
 
 .sticky{
@@ -252,7 +259,6 @@ img.logo{
     top: 50px;
     z-index: -1;
 }
-
 
 .icon{
     width: 40px;
@@ -269,10 +275,6 @@ img.logo{
     width: 80px;
     height: 80px;
     border-radius: 1.4rem;
-}
-
-.details{
-    transform: translate(20%, 20%);
 }
 
 .bg-text4{
@@ -325,7 +327,7 @@ img.logo{
 .bg-text6{
     background-color: #eaeaea;
     margin: 0 auto;
-    padding: 0px 100px 100px;
+    padding: 0px 100px 100px 220px;
 }
 
 .bg-text6>h2{
@@ -381,11 +383,11 @@ img.logo{
 }
 
 #text1, #text2, #text3{
+    width: 56%;
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
-    
+    transform: translate(-50%, -50%);   
 }
 
 .bg-text9{
