--- a/css/style.css
+++ b/css/style.css
@@ -44,7 +44,8 @@ header{
 }
 
 #navigation-links{
-    display: flex;
+    display: grid;
+    grid-template-columns: auto auto auto auto;
     column-gap: 50px;
     -webkit-column-gap: 50px;
     font-size: 14px;
@@ -238,10 +239,11 @@ img.logo{
 
 .bg-text1{
     width: 100%;
-    display: flex;
+    display: grid;
+    grid-template-columns: auto auto;
     justify-content: center;
-    column-gap: 150px;
-    -webkit-column-gap: 150px;
+    column-gap: 50px;
+    -webkit-column-gap: 50px;
     padding-bottom: 80px;
 }
 
@@ -250,7 +252,7 @@ img.logo{
 }
 
 .details{
-    width: 50%;
+    width: 80%;
     padding-top: 50px;
     transform: translate(20%, 20%);
 }
@@ -442,7 +444,8 @@ footer>p{
 }
 
 footer>ul{
-    display: flex;
+    display: grid;
+    grid-template-columns: auto auto auto auto;
     list-style: none;
     column-gap: 100px;
     -webkit-column-gap: 100px;
